--- a/hrdt.html
+++ b/hrdt.html
@@ -39,7 +39,7 @@
     .video-carousel {
       position: relative;
       width: 100%;
-      max-width: 800px;
+      max-width: 600px;
       margin: 0 auto;
       overflow: hidden;
       border-radius: 8px;
@@ -62,7 +62,7 @@
     .video-slide video {
       width: 100%;
       height: auto;
-      max-width: 800px;
+      max-width: 600px;
     }
     
     .carousel-controls {
@@ -175,7 +175,7 @@
                 <a href="https://stormy-cheese-458.notion.site/Hengkai-Tan-22a9b6e0b5bb801782edc3771ff3ba37">Hengkai Tan</a><sup>1</sup>,
             </span>
             <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=HQfc8TEAAAAJ&hl=en">ZhiZhong Su</a><sup>2</sup>,
+                <a href="https://scholar.google.com/citations?user=HQfc8TEAAAAJ&hl=en">Zhizhong Su</a><sup>2</sup>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=dxN1_X0AAAAJ&hl=zh-CN&oi=ao">Hang Su</a><sup>1</sup>,
@@ -313,30 +313,35 @@
             <!-- H-RDT Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">H-RDT</h4>
+                <h4 class="title is-5">
+                  <span class="icon has-text-success" style="margin-right: 0.5rem;">
+                    <i class="fas fa-check-circle"></i>
+                  </span>
+                  H-RDT
+                </h4>
               </div>
               <div class="video-carousel" id="fold-towel-hrdt-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/1.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/2.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/4.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/5.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -360,18 +365,23 @@
             <!-- H-RDT w/o Human Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">H-RDT w/o Human (Scratch)</h4>
+                <h4 class="title is-5">
+                  <span class="icon has-text-danger" style="margin-right: 0.5rem;">
+                    <i class="fas fa-times-circle"></i>
+                  </span>
+                  H-RDT w/o Human (Scratch)
+                </h4>
               </div>
               <div class="video-carousel" id="fold-towel-scratch-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/scratch/3.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/scratch/6.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -406,24 +416,29 @@
             <!-- H-RDT Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">H-RDT</h4>
+                <h4 class="title is-5">
+                  <span class="icon has-text-success" style="margin-right: 0.5rem;">
+                    <i class="fas fa-check-circle"></i>
+                  </span>
+                  H-RDT
+                </h4>
               </div>
               <div class="video-carousel" id="cup-place-hrdt-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/hrdt/3.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/hrdt/4.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/hrdt/5.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -446,18 +461,23 @@
             <!-- H-RDT w/o Human Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">H-RDT w/o Human (Scratch)</h4>
+                <h4 class="title is-5">
+                  <span class="icon has-text-danger" style="margin-right: 0.5rem;">
+                    <i class="fas fa-times-circle"></i>
+                  </span>
+                  H-RDT w/o Human (Scratch)
+                </h4>
               </div>
               <div class="video-carousel" id="cup-place-scratch-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/scratch/1.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 1200px; height: auto;">
+                    <video controls style="width: 100%; max-width: 600px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/scratch/2.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -492,7 +512,7 @@
             <!-- Water Pouring -->
             <div class="column is-3">
               <div class="has-text-centered">
-                <video controls style="width: 100%; max-width: 300px; height: auto;">
+                <video controls style="width: 100%; max-width: 400px; height: auto;">
                   <source src="./assets/hrdt/videos/water_pouring.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
@@ -505,7 +525,7 @@
             <!-- Plates Stacking -->
             <div class="column is-3">
               <div class="has-text-centered">
-                <video controls style="width: 100%; max-width: 300px; height: auto;">
+                <video controls style="width: 100%; max-width: 400px; height: auto;">
                   <source src="./assets/hrdt/videos/plates_stacking.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
@@ -518,7 +538,7 @@
             <!-- Pen Capping -->
             <div class="column is-3">
               <div class="has-text-centered">
-                <video controls style="width: 100%; max-width: 300px; height: auto;">
+                <video controls style="width: 100%; max-width: 400px; height: auto;">
                   <source src="./assets/hrdt/videos/pen_capping.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
