--- a/hrdt.html
+++ b/hrdt.html
@@ -39,7 +39,7 @@
     .video-carousel {
       position: relative;
       width: 100%;
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
       overflow: hidden;
       border-radius: 8px;
@@ -62,7 +62,7 @@
     .video-slide video {
       width: 100%;
       height: auto;
-      max-width: 600px;
+      max-width: 800px;
     }
     
     .carousel-controls {
@@ -313,35 +313,33 @@
             <!-- H-RDT Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">
-                  <span class="icon has-text-success" style="margin-right: 0.5rem;">
-                    <i class="fas fa-check-circle"></i>
-                  </span>
+                <h4 class="title is-5" style="display: flex; align-items: center; justify-content: center;">
+                  <span style="margin-right: 0.3rem; font-size: 1.2em;">✅</span>
                   H-RDT
                 </h4>
               </div>
               <div class="video-carousel" id="fold-towel-hrdt-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/1.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/2.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/4.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/hrdt/5.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -365,23 +363,21 @@
             <!-- H-RDT w/o Human Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">
-                  <span class="icon has-text-danger" style="margin-right: 0.5rem;">
-                    <i class="fas fa-times-circle"></i>
-                  </span>
+                <h4 class="title is-5" style="display: flex; align-items: center; justify-content: center;">
+                  <span style="margin-right: 0.3rem; font-size: 1.2em;">❌</span>
                   H-RDT w/o Human (Scratch)
                 </h4>
               </div>
               <div class="video-carousel" id="fold-towel-scratch-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/scratch/3.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/fold_towel/scratch/6.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -416,29 +412,27 @@
             <!-- H-RDT Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">
-                  <span class="icon has-text-success" style="margin-right: 0.5rem;">
-                    <i class="fas fa-check-circle"></i>
-                  </span>
+                <h4 class="title is-5" style="display: flex; align-items: center; justify-content: center;">
+                  <span style="margin-right: 0.3rem; font-size: 1.2em;">✅</span>
                   H-RDT
                 </h4>
               </div>
               <div class="video-carousel" id="cup-place-hrdt-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/hrdt/3.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/hrdt/4.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/hrdt/5.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -461,23 +455,21 @@
             <!-- H-RDT w/o Human Videos -->
             <div class="column is-5">
               <div class="has-text-centered" style="margin-bottom: 1rem;">
-                <h4 class="title is-5">
-                  <span class="icon has-text-danger" style="margin-right: 0.5rem;">
-                    <i class="fas fa-times-circle"></i>
-                  </span>
+                <h4 class="title is-5" style="display: flex; align-items: center; justify-content: center;">
+                  <span style="margin-right: 0.3rem; font-size: 1.2em;">❌</span>
                   H-RDT w/o Human (Scratch)
                 </h4>
               </div>
               <div class="video-carousel" id="cup-place-scratch-carousel">
                 <div class="video-slides-container">
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/scratch/1.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                   </div>
                   <div class="video-slide">
-                    <video controls style="width: 100%; max-width: 600px; height: auto;">
+                    <video controls style="width: 100%; max-width: 800px; height: auto;">
                       <source src="./assets/hrdt/videos/cup_place/scratch/2.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -512,7 +504,7 @@
             <!-- Water Pouring -->
             <div class="column is-3">
               <div class="has-text-centered">
-                <video controls style="width: 100%; max-width: 400px; height: auto;">
+                <video controls style="width: 100%; max-width: 500px; height: auto;">
                   <source src="./assets/hrdt/videos/water_pouring.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
@@ -525,7 +517,7 @@
             <!-- Plates Stacking -->
             <div class="column is-3">
               <div class="has-text-centered">
-                <video controls style="width: 100%; max-width: 400px; height: auto;">
+                <video controls style="width: 100%; max-width: 500px; height: auto;">
                   <source src="./assets/hrdt/videos/plates_stacking.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
@@ -538,7 +530,7 @@
             <!-- Pen Capping -->
             <div class="column is-3">
               <div class="has-text-centered">
-                <video controls style="width: 100%; max-width: 400px; height: auto;">
+                <video controls style="width: 100%; max-width: 500px; height: auto;">
                   <source src="./assets/hrdt/videos/pen_capping.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
