--- a/hrdt.html
+++ b/hrdt.html
@@ -194,7 +194,7 @@
             <div class="publication-links">
               <!-- arXiv Link. -->
               <span class="link-block">
-                <a href="#"
+                <a href="https://arxiv.org/abs/2507.23523"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -606,7 +606,7 @@
     title={H-RDT: Human Manipulation Enhanced Bimanual Robotic Manipulation}, 
     author={Hongzhe Bi and Lingxuan Wu and Tianwei Lin and Hengkai Tan and Zhizhong Su and Hang Su and Jun Zhu},
     year={2025},
-    eprint={TBD},
+    eprint={2507.23523},
     archivePrefix={arXiv},
     primaryClass={cs.RO},
     url={https://embodiedfoundation.github.io/hrdt}, 
