--- a/hrdt.html
+++ b/hrdt.html
@@ -365,7 +365,7 @@
               <div class="has-text-centered" style="margin-bottom: 1rem;">
                 <h4 class="title is-5" style="display: flex; align-items: center; justify-content: center;">
                   <span style="margin-right: 0.3rem; font-size: 1.2em;">❌</span>
-                  H-RDT w/o Human (Scratch)
+                  H-RDT w/o Human
                 </h4>
               </div>
               <div class="video-carousel" id="fold-towel-scratch-carousel">
@@ -457,7 +457,7 @@
               <div class="has-text-centered" style="margin-bottom: 1rem;">
                 <h4 class="title is-5" style="display: flex; align-items: center; justify-content: center;">
                   <span style="margin-right: 0.3rem; font-size: 1.2em;">❌</span>
-                  H-RDT w/o Human (Scratch)
+                  H-RDT w/o Human
                 </h4>
               </div>
               <div class="video-carousel" id="cup-place-scratch-carousel">
