--- a/hrdt.html
+++ b/hrdt.html
@@ -237,7 +237,7 @@
         
         <div class="has-text-centered my-5">
           <figure class="image">
-            <img src="./assets/hrdt/figure1.jpg" alt="H-RDT Overview" style="max-width: 120%; height: auto; display: block; margin: 0 auto;">
+            <img src="./assets/hrdt/figure1.png" alt="H-RDT Overview" style="max-width: 120%; height: auto; display: block; margin: 0 auto;">
           </figure>
           <p class="has-text-grey is-size-6">Figure 1: Overview of H-RDT. A human-to-robotics diffusion transformer with two-stage training.</p>
         </div>
