--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -648,8 +648,8 @@
     <h2 class="title">BibTeX</h2>
     If you find our work helpful, please cite us:
     <pre><code>
-@misc{feng2025generalistbimanualmanipulationfoundation,
-    title={Generalist Bimanual Manipulation via Foundation Video Diffusion Models}, 
+@misc{feng2025vidarembodiedvideodiffusion,
+    title={Vidar: Embodied Video Diffusion Model for Generalist Bimanual Manipulation},
     author={Yao Feng and Hengkai Tan and Xinyi Mao and Guodong Liu and Shuhe Huang and Chendong Xiang and Hang Su and Jun Zhu},
     year={2025},
     eprint={2507.12898},
