add twitter link

--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -224,15 +224,24 @@
               </a>
             </span>
               
-              <span class="link-block">
-                <a href="https://mp.weixin.qq.com/s/AGOcR7oiYSIQ6zbmFdswgw"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-external-link-alt"></i>
-                  </span>
-                  <span>量子位推送(in Chinese)</span>
-                </a>
-              </span>
+            <span class="link-block">
+              <a href="https://x.com/Bernard99652469/status/1951981579842269485" class="external-link button is-normal is-rounded is-dark">
+                <span class="icon"> 
+                  <i class="fa-brands fa-twitter"></i>                            
+                </span>
+                <span>Twitter</span>
+              </a>
+            </span>  
+
+            <span class="link-block">
+              <a href="https://mp.weixin.qq.com/s/AGOcR7oiYSIQ6zbmFdswgw"
+                  class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                    <i class="fas fa-external-link-alt"></i>
+                </span>
+                <span>量子位推送(in Chinese)</span>
+              </a>
+            </span>
 
               <!-- <span class="link-block">
                 <a href="https://zhuanlan.zhihu.com/p/15565509532"
