add twitter links

--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -227,7 +227,7 @@
             <span class="link-block">
               <a href="https://x.com/Bernard99652469/status/1951981579842269485" class="external-link button is-normal is-rounded is-dark">
                 <span class="icon"> 
-                  <i class="fa-brands fa-twitter"></i>                            
+                  <i class="fab fa-twitter"></i>                            
                 </span>
                 <span>Twitter</span>
               </a>
