feat: add vidar prediction samples
fix: vidar prediction samples in a row

fix: vidar prediction samples in a row

--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -91,7 +91,7 @@
             </div>
             <!-- <br> -->
             <span class="author-block">
-              <a href="https://github.com/shhmxy2">Xinyi Mao</a><sup>1</sup>,
+              <a href="https://shhmxy2.github.io/">Xinyi Mao</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://github.com/huangshuhe">Shuhe Huang</a><sup>1</sup>,
@@ -377,6 +377,64 @@
             </li>
             <li><strong>Test-Time Scaling (TTS):</strong> We generate <em>K</em> candidate video trajectories using different random seeds. Then rank these trajectories using a pretrained evaluator (e.g., CLIP or a vision-language model) and select the one which scores the highest.</li>
           </ul>
+        </div>
+        
+        <div class="content has-text-justified">
+          <h3 class="title is-4">Vidar Predicted Video Samples</h3>
+          <div class="columns is-centered" style="margin-top: 2rem;">
+            <!-- Lift Dish -->
+            <div class="column is-3">
+              <div class="has-text-centered">
+                <video controls style="width: 100%; max-width: 500px; height: auto;">
+                  <source src="./assets/videos/vidar_pred_example/green_lift_the_vertical_edge_dish_using_both_arms.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <p class="has-text-centered is-size-6 has-text-grey-dark" style="margin-top: 1rem;">
+                  <strong>Lift Dish</strong>
+                </p>
+              </div>
+            </div>
+
+            <!-- Place Apple -->
+            <div class="column is-3">
+              <div class="has-text-centered">
+                <video controls style="width: 100%; max-width: 500px; height: auto;">
+                  <source src="./assets/videos/vidar_pred_example/put_the_green_apple_in_the_basket.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <p class="has-text-centered is-size-6 has-text-grey-dark" style="margin-top: 1rem;">
+                  <strong>Place Apple</strong>
+                </p>
+              </div>
+            </div>
+
+            <!-- Trash Paper Ball -->
+            <div class="column is-3">
+              <div class="has-text-centered">
+                <video controls style="width: 100%; max-width: 500px; height: auto;">
+                  <source src="./assets/videos/vidar_pred_example/trash_the_paper_ball.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <p class="has-text-centered is-size-6 has-text-grey-dark" style="margin-top: 1rem;">
+                  <strong>Trash Paper Ball</strong>
+                </p>
+              </div>
+            </div>
+
+            <!-- Wipe Table -->
+            <div class="column is-3">
+              <div class="has-text-centered">
+                <video controls style="width: 100%; max-width: 500px; height: auto;">
+                  <source src="./assets/videos/vidar_pred_example/wipe_table.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <p class="has-text-centered is-size-6 has-text-grey-dark" style="margin-top: 1rem;">
+                  <strong>Wipe Table</strong>
+                </p>
+              </div>
+            </div>
+
+          </div>
         </div>
         
       </div>
